# pattern

./: .baw  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  pyproject.toml  requirements.dev  requirements.txt  setup.py
.baw/: project.config
.github/workflows/: pypi.yml  release.yml  test.yml
docs/: index.rst
docs/releases/: 0.1.0.rst  backlog.rst
pattern/: __init__.py  checker.py  split.py  tok.py
pattern/judge/: abbreviation.py  date.py  number.py  person.py  url.py
pattern/machine/: machine.py
pattern/text/: regex.py  sentence.py
tests/: test_judge_abbreviation.py  test_judge_date.py  test_judge_person.py  test_judge_url.py  test_machine.py  test_split.py  test_text_regex.py  test_text_sentence.py
