[build-system]
requires = [
    "setuptools>=83.0.0",
    "wheel>=0.47.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "exemplum"
version = "0.4.0"
description = ""
requires-python = ">=3.12"
authors = [
    { name = "Helmut Konrad Schewe", email = "helmutus@outlook.com" },
]
dependencies = [
    "utilo>=2.109.1,<3.0.0",
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.readme]
file = "README"
content-type = "text/markdown"

[project.optional-dependencies]
dev = [
    "germania==1.32.0",
    "utilotest==1.0.4",
]

[project.urls]
Homepage = "https://github.com/anaticulae/pattern"
Repository = "https://github.com/anaticulae/pattern"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.changelog]
mode = "init"
output_format = "md"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG"

[tool.semantic_release.commit_parser_options]
patch_tags = [
    "fix",
    "perf",
    "build",
    "chore",
    "ci",
    "docs",
    "style",
    "refactor",
    "test",
    "deps",
]

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "pattern",
    "pattern.judge",
    "pattern.machine",
    "pattern.text",
]
exclude = [
    "tests*",
]
